# contract-agent

./: .replit  README.md  pyproject.toml
contract-agent/: .gitignore  README.md  pyproject.toml
contract-agent/.streamlit/: config.toml
contract-agent/agent_mcp/tools/: save_report.py
contract-agent/app/: main_app.py
contract-agent/app/components/: __init__.py  results.py  sidebar.py  uploader.py
contract-agent/config/: logging.py  settings.py
contract-agent/crew/: __init__.py  analysis_task.py  contract_crew.py  contract_reader.py  executive_summarizer.py  legal_analyst.py  reading_task.py  summary_task.py
contract-agent/docs/: agent-flow.md  architecture.md  crewai.md  interview-notes.md  langgraph.md  mcp.md  sequence-diagram.md
contract-agent/graph/: __init__.py  state.py  workflow.py
contract-agent/mcp/: server.py
contract-agent/mcp/tools/: read_file.py  search_clause.py
contract-agent/models/: schemas.py
contract-agent/prompts/: contract_reader.md  executive_summarizer.md  legal_analyst.md
contract-agent/tests/: test_graph.py  test_mcp_server.py  test_read_file.py  test_save_report.py  test_search_clause.py
contract-agent/utils/: file_utils.py  text_utils.py
