[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "crewai>=1.6.1",
    "langchain-openai>=1.3.3",
    "mcp>=1.28.0",
    "pypdf>=6.14.2",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "python-dotenv>=1.2.2",
    "tiktoken>=0.13.0",
]
